recursion.cons.butlast.ButLast.scala.error
Compilation error:
ButLast:6: error: not found: value butlast
  else l.head::butlast(l.tail)
               ^